[project]
name = "healthcare-agent"
version = "0.1.0"
description = "Conversational healthcare appointment assistant backend"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi[standard]>=0.135.3",
    "langchain>=1.2.15",
    "langfuse>=3.10.1",
    "langgraph>=1.0.2",
    "langchain-openai>=1.1.12",
    "python-dotenv>=1.1.1",
    "pydantic>=2.13.0",
    "pytest>=8.4.2",
    "langgraph-cli[inmem]>=0.4.21",
]

[tool.pytest.ini_options]
pythonpath = ["."]
